# max-tree-exploration

./: .gitignore  CMakeLists.txt  README.md
bench/: CMakeLists.txt  bench_cpu.cpp  bench_gpu.cu  main_bench.cpp  plot.py  run_bench.sh
include/: opencv.hpp
include/common/: opencv.hpp
include/cpu/: display.hpp  filter.hpp  filterTreeContractions.hpp  maxtree.hpp
include/gpu/: display.hpp  filter.hpp  maxtree.hpp
include/maxtree/: core.hpp  display.hpp  filter.hpp
src/: CMakeLists.txt  main.cpp  opencv.cpp
src/common/: CMakeLists.txt  opencv.cpp
src/cpu/: CMakeLists.txt  display.cpp  filter.cpp  filterTreeContractions.cpp  main_cpu.cpp  maxtree.cpp
src/gpu/: CMakeLists.txt  display.cpp  filter.cu  main_gpu.cpp  maxtree.cu
src/maxtree/: CMakeLists.txt  core.cpp  display.cpp  filter.cpp
